--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@ button {
 button:hover {
   color: #ffffff;
   background: #6070ff;
-  box-shadow: 0px 8px 16px rgba(64, 83, 252, 0.24);
+  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
   border-radius: 8px;
 }
 
