--- a/styles.css
+++ b/styles.css
@@ -44,17 +44,18 @@
   margin-bottom: 3px;
   border-radius: 8px;
 }
+
 li {
   list-style: none;
 }
 
-.nav ul li{
+.nav ul li {
   list-style: none;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
   font-weight: 600;
   font-size: 32px;
-  line-height: 44px
+  line-height: 44px;
 }
 
 .hero-section {
