--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,15 @@
   justify-content: space-between;
 }
 
+body {
+  font-family: 'Poppins', sans-serif;
+}
+
 .wifi-net-battery {
   padding-top: 12px;
 }
 
-.nav a {
+.nav-links a {
   text-decoration: none;
   color: #fff;
 }
@@ -49,7 +53,7 @@ li {
   list-style: none;
 }
 
-.nav ul li {
+.nav-links ul li {
   list-style: none;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
@@ -69,7 +73,6 @@ li {
 }
 
 h1.about-title {
-  font-family: 'Poppins', sans-serif;
   font-weight: 700;
   font-size: 40px;
   line-height: 52px;
@@ -137,13 +140,50 @@ button:disabled {
   color: #5e6c84;
 }
 
-.nav {
+.nav-links {
   display: none;
   visibility: hidden;
 }
 
+.card {
+  width: 90%;
+  margin: 1rem auto;
+  border-radius: 0.5rem;
+}
+
+.card img {
+  width: 100%;
+}
+
+.card h3{
+  color: #172b4d;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 2.5rem;
+}
+
+.project-links {
+  display: flex;
+}
+
+.canopy {
+  color: #344563;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1rem;
+  line-height: 1rem;
+}
+
+.small-circle {
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 50%;
+  color: #c1c7d0;
+}
+
 @media only screen and (max-width: 768px) {
-  .nav {
+  .nav-links {
     width: 100%;
     background-color: #6070ff;
     height: 100vh;
