--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
+body {
+  font-family: 'Poppins', sans-serif;
+  background-color: #f7f7f9;
+}
+
 .header {
   width: 100%;
   position: relative;
@@ -11,7 +16,7 @@
   padding-top: 12px;
 }
 
-.nav a {
+.nav-links a {
   text-decoration: none;
   color: #fff;
 }
@@ -49,7 +54,7 @@ li {
   list-style: none;
 }
 
-.nav ul li {
+.nav-links ul li {
   list-style: none;
   font-family: 'Poppins', sans-serif;
   font-style: normal;
@@ -137,13 +142,215 @@ button:disabled {
   color: #5e6c84;
 }
 
-.nav {
+.nav-links {
   display: none;
   visibility: hidden;
 }
 
+.middle-section {
+  display: flex;
+  flex-direction: column;
+}
+
+.card {
+  width: 90%;
+  margin: 1rem auto;
+  display: flex;
+  flex-direction: column;
+  border-radius: 1rem;
+  border: 1px solid #dfe1e6;
+  background-color: #fff;
+  padding-bottom: 1rem;
+}
+
+.project-image img {
+  width: 100%;
+}
+
+ul.project-links {
+  list-style: none;
+  display: flex;
+  width: 80%;
+  align-items: center;
+  justify-content: flex-start;
+  
+}
+
+.project-links {
+  list-style-type: none;
+  margin-left: 1rem;
+  margin-bottom: -0.5rem;
+  margin-top: 0.5rem;
+}
+
+.project-links li {
+  margin-right: 1rem;
+}
+
+.small-circle {
+  width: 0.5rem;
+  height: 0.5rem;
+  border-radius: 50%;
+  background-color: #c1d7d0;
+}
+
+.project-title {
+  color: #172b4d;
+  font-style: normal;
+  font-weight: bolder;
+  font-size: 2.4rem;
+  padding-left: 1rem;
+  margin-bottom: -0.5rem;
+  line-height: 2.4rem;
+}
+
+.canopy {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1.2rem;
+  color: #344563;
+  margin-left: -2.2rem;
+}
+
+.career-role, .year {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 0.8rem;
+  line-height: 1rem;
+  color: #7a869a;
+}
+
+.project-description p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1.2rem;
+  line-height: 1.5rem;
+  color: #344563;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.my-skills {
+  display: flex;
+  padding-left: 1rem;
+  text-align: center;
+}
+
+.skill-link {
+  margin-right: 1rem;
+  text-decoration: none;
+  padding: 8px;
+  color: #6070ff;
+  background-color: #e5e5e5;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  letter-spacing: 0.03em;
+  border-radius: 0.5rem;
+}
+
+a.see-project-btn {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 1.1rem;
+  line-height: 1.5rem;
+  color: #396df2;
+  text-align: center;
+  letter-spacing: 0.03em;
+  background: #fff;
+  border: 1px solid #396df2;
+  padding: 1rem;
+  width: 40%;
+  border-radius: 1rem;
+  margin-top: 0.5rem;
+  margin-left: 1rem;
+}
+
+.about-rose {
+  background-color: #fff;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.languages{
+  width: 100%;
+  margin: 0.5rem auto;
+  background-color: #fff;
+}
+
+.languages-title {
+  color: #000;
+  padding-left: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  font-weight: bolder;
+  font-size: 1.25rem;
+  line-height: 1.5rem;
+}
+
+.card-language {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.js-img img, .html-img img, .css-img img  {
+  margin-top: 1rem;
+  width: 96%;
+  border-radius: 0.5rem;
+  margin-left: -1.4rem;
+}
+
+.frameworks, .skills {
+  background-color: #fff;
+  display: flex;
+  flex-direction: column;
+}
+
+.framework-btn, .skill-btn {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 2rem;
+  align-items: center;
+}
+
+hr {
+  margin: 1rem;
+  width: 90%;
+  border: none;
+  border-bottom: 1px solid #dfe1e6;
+}
+
+.footer {
+  width: 100%;
+  background-image: url('images/contact-form.svg"');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.contact-me-title {
+  color: #fff;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 2.5rem;
+  line-height: 3.25rem;
+}
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 @media only screen and (max-width: 768px) {
-  .nav {
+  .nav-links {
     width: 100%;
     background-color: #6070ff;
     height: 100vh;
@@ -172,4 +379,8 @@ button:disabled {
   .about-me {
     width: 90%;
   }
+
+  .project-title {
+      width: 60%;
+    }
 }
