Fix linters error

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-.content {
+.body-content {
   font-family: 'Poppins', sans-serif;
   background-color: #f7f7f9;
 }
