--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,7 @@ h4.connect-link {
   font-weight: 500;
   font-size: 1rem;
   line-height: 1rem;
-  color: #7F8CFF;
+  color: #7f8cff;
   margin-top: 0.5rem;
   padding-bottom: 0.5rem;
 }
