--- a/styles.css
+++ b/styles.css
@@ -322,10 +322,10 @@ a.see-project-btn {
 
 .languages {
   width: 98%;
-  margin: 0.5rem auto;
+  margin: 0.5rem auto 0 auto;
   background-color: #fff;
   padding-left: 1rem;
-  padding-top: 1rem;
+  height: 600px;
 }
 
 .languages-title {
@@ -390,14 +390,16 @@ hr {
   padding: 1rem;
 }
 
-.footer {
+.contact-form-section {
   width: 100%;
-  background-image: url('images/contact-form.svg"');
+  background-image: url('images/contactformshapes.svg"');
   background-repeat: no-repeat;
   background-size: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #6070ff;
+  border-top-left-radius: 6rem;
 }
 
 .contact-me-title {
@@ -406,12 +408,61 @@ hr {
   font-weight: 700;
   font-size: 2.5rem;
   line-height: 3.25rem;
+  margin-bottom: 30px;
+  margin-top: 46px;
 }
 
 .contact-form {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  padding-left: 0.5rem;
+  padding-right: 0.5rem
+}
+
+.contact-description {
+  color: #ebebff;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 28px;
+  padding-left: 24px;
+  padding-right: 4px;
+  margin-bottom: 40px;
+}
+
+.contact-form input {
+  margin-bottom: 1rem;
+  padding: 0.6rem;
+  border-radius: 8px;
+  border: transparent;
+  width: 327px;
+  height: 48px;
+}
+
+input::placeholder {
+  color: #172b4d;
+}
+
+textarea::placeholder {
+  color: #b3bac5;
+}
+
+.contact-form textarea {
+  padding: 0.6rem;
+  width: 327px;
+  height: 170px;
+  border: 1px solid #CFD8DC;
+  border-radius: 8px;
+  padding-top: 15px;
+  margin-bottom: 1rem;
+}
+
+.contact-form button {
+  width: 142px;
+  height: 48px;
+  background-color: #fff;
+  text-align: center;
+  margin-bottom: 1rem;
 }
 
 @media only screen and (max-width: 768px) {
