--- a/styles.css
+++ b/styles.css
@@ -147,7 +147,7 @@ button {
 
 button:hover {
   color: #fff;
-  background: #6070ff;
+  background-color: #6070ff;
   box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
   border-radius: 8px;
 }
