--- a/styles.css
+++ b/styles.css
@@ -417,6 +417,7 @@ hr {
   line-height: 3.25rem;
   margin-bottom: 30px;
   margin-top: 96px;
+  text-align: center;
 }
 
 .contact-form {
@@ -439,9 +440,8 @@ ul {
   font-weight: 400;
   font-size: 20px;
   line-height: 28px;
-  padding-left: 24px;
-  padding-right: 4px;
   margin-bottom: 40px;
+  text-align: center;
 }
 
 .contact-form input {
@@ -477,6 +477,25 @@ textarea::placeholder {
   background-color: #fff;
   text-align: center;
   margin-bottom: 1rem;
+  border: 1px solid #7f8cff;
+}
+
+.contact-form button:hover {
+  color: #fff;
+  background-color: #6070ff;
+  box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
+  border-radius: 8px;
+}
+
+.contact-form button:active {
+  background: #2230d2;
+  border-radius: 8px;
+  color: #fff;
+}
+
+.contact-form button:disabled {
+  background-color: #e5e5e5;
+  color: #5e6c84;
 }
 
 @media only screen and (max-width: 768px) {
