--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@
   position: relative;
   display: flex;
   justify-content: space-between;
+  background-color: #fff;
 }
 
 body {
@@ -82,6 +83,7 @@ form li + li {
 }
 
 .hero-section {
+  background-color: #fff;
   width: 100%;
   background-image: url("images/header-shapes-mobile.svg");
   background-repeat: no-repeat;
@@ -314,22 +316,14 @@ a.see-project-btn {
 
 .about-rose {
   background-color: #fff;
-  width: 100%;
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  padding-left: 1rem;
-  padding-top: 4rem;
-  margin-top: 2rem;
   border-top-right-radius: 6rem;
+  padding-bottom: 20px;
 }
 
 .languages {
-  width: 98%;
-  margin: 0.5rem auto 0 auto;
   background-color: #fff;
-  padding-left: 1rem;
-  height: 600px;
 }
 
 .languages-title {
@@ -337,14 +331,8 @@ a.see-project-btn {
   font-style: normal;
   font-weight: 500;
   font-weight: bolder;
-  font-size: 1.25rem;
+  /* font-size: 1.25rem; */
   line-height: 1.5rem;
-}
-
-.card-language {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
 }
 
 .card-framework {
@@ -483,6 +471,11 @@ textarea::placeholder {
   color: #5e6c84;
 }
 
+.lang {
+  display: flex;
+  justify-content: space-between;
+}
+
 @media only screen and (max-width: 768px) {
   .nav-links {
     width: 100%;
@@ -513,7 +506,7 @@ textarea::placeholder {
 
   h1.about-title {
     width: 70%;
-    padding-top: 1rem;
+    padding-top: 200px;
     padding-bottom: 1rem;
   }
 
@@ -529,12 +522,57 @@ textarea::placeholder {
     width: 50%;
   }
 
+  .about-rose {
+    width: 100%;
+    height: 100vh;
+    padding-left: 1rem;
+    padding-top: 2rem;
+    margin-top: 2rem;
+  }
+
+  .languages {
+    width: 98%;
+    margin: 0.5rem auto 0 auto;
+    padding-left: 1rem;
+    height: 600px;
+  }
+
   .js-img img,
   .html-img img,
   .css-img img {
     margin-top: 1rem;
-    width: 90%;
+    width: 48px;
     border-radius: 0.5rem;
+  }
+
+  .card-language li {
+    width: 90%;
+    height: 80px;
+    background-color: #f7f7f9;
+    border-radius: 8px;
+    margin: 12px auto 12px auto;
+    display: flex;
+    color: #253858;
+    font-weight: 500;
+    font-size: 15px;
+    padding: 8px;
+    align-items: center;
+  }
+
+  .lang {
+    margin: 40px 0 20px auto;
+  }
+
+  .js,
+  .html,
+  .css {
+    padding-right: 10px;
+  }
+
+  .card-language {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   .framework-list,
@@ -583,27 +621,27 @@ textarea::placeholder {
   }
 
   .hero-section {
+    background-color: #fff;
     width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     height: 700px;
-    margin: 50px auto;
-    padding-left: 400px;
+    padding-left: 300px;
     border-bottom-left-radius: 6rem;
     background-image: url("images/Headerdesktopbg.svg");
     background-repeat: no-repeat;
     background-size: 100%;
   }
 
-  .full-description .about-me {
-    width: 45%;
+  .hero-section .full-description .about-me {
+    width: 700px;
     padding-top: 12px;
     padding-bottom: 12px;
   }
 
   .about-rose .full-description .about-me {
-    width: 60%;
+    width: 500px;
     padding-top: 18px;
     padding-bottom: 18px;
     font-size: 14px;
@@ -630,7 +668,7 @@ textarea::placeholder {
   }
 
   a.see-project-btn {
-    width: 30%;
+    width: 40%;
     margin-top: 2rem;
     margin-left: 0;
   }
@@ -667,7 +705,6 @@ textarea::placeholder {
     border-top-right-radius: 0;
     margin-top: 0;
     padding-left: 200px;
-    width: 50%;
     height: 650px;
   }
 
@@ -677,14 +714,15 @@ textarea::placeholder {
     justify-content: center;
     border-top-right-radius: 6rem;
     margin-top: 20px;
-    padding: 100px;
+    padding-left: 100px;
+    padding-right: 100px;
   }
 
-  h1.about-title {
-    width: 30%;
+  .hero-section .about-title-section h1.about-title {
+    width: 800px;
     padding: 1rem 0 1rem 0;
     margin-left: 0;
-    font-size: 64px;
+    font-size: 48px;
     font-weight: 700;
     line-height: 60px;
     letter-spacing: 0.37px;
@@ -701,14 +739,10 @@ textarea::placeholder {
     margin-top: 12px;
   }
 
-  .js-img img,
-  .html-img img,
-  .css-img {
-    margin-right: 24px;
-  }
+ 
 
   ul.details li img {
-    margin-right: 4px;
+    margin-right: 12px;
   }
 
   .hero-section .socials-section .icons li a img {
@@ -722,23 +756,50 @@ textarea::placeholder {
   }
 
   .languages {
-    width: 50%;
+    width: 800px;
     margin: 0;
     background-color: #fff;
-    padding-left: 1rem;
+    padding-left: 16px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding-top: 1rem;
     height: 650px;
-    margin-left: -24px;
   }
 
   .card-language {
-    padding-top: 1rem;
+    margin-top: 1rem;
+    display: flex;
     flex-direction: row;
     justify-content: flex-start;
+  }
+
+  .card-language li {
+    width: 122px;
+    height: 120px;
+    background-color: #f7f7f9;
+    border-radius: 8px;
+    margin-right: 12px;
+    display: flex;
+    flex-direction: column;
+    color: #253858;
+    font-weight: 500;
+    font-size: 15px;
+    padding: 8px;
+  }
+
+  img.html,
+  img.js,
+  img.css {
+    width: 48px;
+    height: 48px;
+    padding-bottom: 12px;
+  }
+
+  .js-img,
+  .html-img,
+  .css-img {
+    margin-right: 12px;
+    margin-top: 1rem;
+    
   }
 
   .languages-title {
@@ -780,6 +841,12 @@ textarea::placeholder {
   .contact-form button {
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .arrow-down {
+    width: 1rem;
+    height: 1rem;
+    margin-right: 30px;
   }
 
   .contact-form-section {
