--- a/styles.css
+++ b/styles.css
@@ -144,6 +144,7 @@ button {
   padding-top: 12px;
   padding-bottom: 12px;
   border: transparent;
+  transition: all 0.03s;
 }
 
 button:hover {
@@ -151,17 +152,20 @@ button:hover {
   background-color: #6070ff;
   box-shadow: 0 8px 16px rgba(64, 83, 252, 0.24);
   border-radius: 8px;
+  transition: all 0.03s;
 }
 
 button:active {
   background: #2230d2;
   border-radius: 8px;
   color: #fff;
+  transition: all 0.03s;
 }
 
 button:disabled {
   background-color: #e5e5e5;
   color: #5e6c84;
+  transition: all 0.03s;
 }
 
 .nav-links {
