--- a/styles.css
+++ b/styles.css
@@ -90,10 +90,11 @@ form li + li {
   background-size: 100%;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
 }
 
-h1.about-title {
+h1.about-title,
+h2.about-title {
   font-weight: 700;
   font-size: 40px;
   line-height: 52px;
@@ -175,6 +176,7 @@ button:disabled {
 
 .card img {
   width: 100%;
+  height: 100%;
 }
 
 .card h3 {
@@ -211,7 +213,7 @@ button:disabled {
 
 .card {
   width: 90%;
-  height: 36rem;
+  height: 98%;
   margin: 1rem auto;
   display: flex;
   flex-direction: column;
@@ -531,7 +533,7 @@ textarea::placeholder {
 
   .about-rose {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     padding-left: 1rem;
     padding-top: 2rem;
     margin-top: 2rem;
@@ -541,7 +543,7 @@ textarea::placeholder {
     width: 98%;
     margin: 0.5rem auto 0 auto;
     padding-left: 1rem;
-    height: 600px;
+    height: 20%;
   }
 
   .js-img img,
@@ -554,7 +556,7 @@ textarea::placeholder {
 
   .card-language li {
     width: 90%;
-    height: 80px;
+    /* height: 20%; */
     background-color: #f7f7f9;
     border-radius: 8px;
     margin: 12px auto 12px auto;
@@ -638,7 +640,7 @@ img:hover {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 700px;
+    height: 100%;
     padding-left: 300px;
     border-bottom-left-radius: 6rem;
     background-image: url("images/Headerdesktopbg.svg");
@@ -660,8 +662,8 @@ img:hover {
   }
 
   .card {
-    width: 1156px;
-    height: 30rem;
+    width: 90%;
+    height: 98%;
     flex-direction: row;
     padding: 16px 32px 16px 32px;
     margin: 2rem auto;
@@ -717,7 +719,7 @@ img:hover {
     border-top-right-radius: 0;
     margin-top: 0;
     padding-left: 200px;
-    height: 650px;
+    height: 100%;
   }
 
   .rose-full-details {
@@ -730,7 +732,8 @@ img:hover {
     padding-right: 100px;
   }
 
-  .hero-section .about-title-section h1.about-title {
+  .hero-section .about-title-section h1.about-title, 
+  h2.about-title {
     width: 800px;
     padding: 1rem 0 1rem 0;
     margin-left: 0;
