--- a/styles.css
+++ b/styles.css
@@ -50,6 +50,8 @@ body {
   width: 40px;
   height: 40px;
   right: 24px;
+  margin-right: 20%;
+  margin-left: 0;
   top: calc(87% - 40px / 2);
 }
 
@@ -204,6 +206,7 @@ button:disabled {
 .middle-section {
   display: flex;
   flex-direction: column;
+  height: 100%;
 }
 
 .works {
@@ -326,6 +329,7 @@ a.see-project-btn {
   flex-direction: column;
   border-top-right-radius: 6rem;
   padding-bottom: 20px;
+  margin: 0;
 }
 
 .languages {
@@ -383,7 +387,7 @@ hr {
   align-items: center;
   background-color: #6070ff;
   border-top-left-radius: 6rem;
-  height: 739px;
+  height: 100%;
 }
 
 .contact-me-title {
@@ -590,10 +594,16 @@ textarea::placeholder {
     justify-content: space-between;
     padding: 1rem;
   }
+
+  button.submit-btn {
+    width: 75%;
+    height: 20%;
+  }
+
 }
 
 img:hover {
-  transform: scale(1.3);
+  transform: scale(0.8);
   transition: all 2s ease-in-out 0.4s;
 }
 
@@ -612,10 +622,6 @@ img:hover {
 
   .logo-section {
     padding-top: 24px;
-  }
-
-  .bars {
-    display: none;
   }
 
   .nav-links {
@@ -724,23 +730,25 @@ img:hover {
 
   .rose-full-details {
     width: 100%;
+    height: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     border-top-right-radius: 6rem;
     margin-top: 20px;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .hero-section .about-title-section h1.about-title, 
   h2.about-title {
-    width: 800px;
+    width: 100%;
     padding: 1rem 0 1rem 0;
     margin-left: 0;
     font-size: 48px;
     font-weight: 700;
     line-height: 60px;
     letter-spacing: 0.37px;
+
   }
 
   .icons {
@@ -769,13 +777,12 @@ img:hover {
   }
 
   .languages {
-    width: 800px;
+    width: 50%;
     margin: 0;
     background-color: #fff;
-    padding-left: 16px;
     display: flex;
     flex-direction: column;
-    height: 650px;
+    
   }
 
   .card-language {
@@ -862,9 +869,20 @@ img:hover {
   }
 
   .contact-form-section {
+    width: 100%;
+    height: 100%;
     background-image: url('images/contactformbg.svg');
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
+  }
+
+  button.submit-btn {
+    width: 50%;
+    height: 10%;
+  }
+
+  .bars {
+    display: none;
   }
 }
