--- a/styles.css
+++ b/styles.css
@@ -560,7 +560,6 @@ textarea::placeholder {
 
   .card-language li {
     width: 90%;
-    /* height: 20%; */
     background-color: #f7f7f9;
     border-radius: 8px;
     margin: 12px auto 12px auto;
@@ -724,8 +723,8 @@ img:hover {
   .about-rose {
     border-top-right-radius: 0;
     margin-top: 0;
-    padding-left: 200px;
-    height: 100%;
+    padding-left: 10%;
+    padding-right: 5%;
   }
 
   .rose-full-details {
@@ -734,9 +733,7 @@ img:hover {
     display: flex;
     justify-content: space-between;
     border-top-right-radius: 6rem;
-    margin-top: 20px;
-    padding-left: 0;
-    padding-right: 0;
+    margin-top: 10%;
   }
 
   .hero-section .about-title-section h1.about-title, 
@@ -777,11 +774,12 @@ img:hover {
   }
 
   .languages {
-    width: 50%;
+    width: 100%;
     margin: 0;
     background-color: #fff;
     display: flex;
     flex-direction: column;
+    padding-right: 10%;
     
   }
 
