--- a/styles.css
+++ b/styles.css
@@ -513,10 +513,6 @@ textarea::placeholder {
     filter: blur(5px);
   }
 
-  .nav-links ul li {
-    list-style: none;
-  }
-
   .logo-section {
     padding-top: 40px;
   }
@@ -582,6 +578,10 @@ textarea::placeholder {
     font-size: 15px;
     padding: 8px;
     align-items: center;
+  }
+
+  .nav-links ul li {
+    list-style: none;
   }
 
   .lang {
@@ -917,8 +917,8 @@ img:hover {
     border-bottom: 1px solid #dfe1e6;
   }
 
-  .framework-list .languages-title,
-  .skill-list, .languages-title {
+  .frame-titles,
+  .skilltitle {
     width: 120%;
     height: 20%;
   }
