--- a/styles.css
+++ b/styles.css
@@ -49,10 +49,7 @@ body {
   padding-top: 8px;
   position: absolute;
   right: 12%;
-<<<<<<< HEAD
   margin-left: 0;
-=======
->>>>>>> f485e34901dcd179fab96376533dd64d319a10de
   top: calc(87% - 40px / 2);
 }
 
@@ -285,7 +282,7 @@ ul.project-links {
   border-radius: 0.5rem;
 }
 
-a.see-project-btn {
+button.see-project-btn {
   text-decoration: none;
   font-weight: 500;
   font-size: 1.1rem;
@@ -478,6 +475,10 @@ textarea::placeholder {
   justify-content: space-between;
 }
 
+.modal {
+  display: none;
+}
+
 @media only screen and (max-width: 768px) {
   .nav-links {
     width: 100%;
@@ -611,6 +612,113 @@ textarea::placeholder {
     width: 75%;
     height: 20%;
   }
+
+  .visible {
+    background-color: red;
+    width: 96%;
+    height: 100vh;
+    margin: 8px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 1px solid #ebecf0;
+    box-shadow: 0px 48px 48px rgba(37, 47, 137, 0.08);
+    border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    background-color: #fff;
+    z-index: 20;
+  }
+
+  .modal img {
+    width: 98%;
+    height: 70%;
+    object-fit: contain;
+    padding: 12px;
+  }
+
+  .modal .project-title {
+    padding: 40px 0 20px 10px;
+  }
+
+  .modal .description-and-links p {
+    padding-left: 12px;
+  }
+
+  .modal .description-and-links {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .modal .project-links {
+    display: flex;
+    padding: 0 0 20px 12px;
+  }
+
+  .modal .my-skills {
+    display: flex;
+    gap: 1px;
+    padding-left: 20px;
+    width: 40%;
+
+  }
+
+  .modal .modal-right {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .modal .btns {
+    display: flex;
+    justify-content: center;
+    gap: 2px;
+    padding-top: 12px;
+    padding-right: 8px;
+  }
+
+  .modal img.cancel-modal {
+    position: absolute;
+    top: 6%;
+    right: 5%;
+    z-index: 12;
+    width: 60px;
+    height: 40px;
+  }
+
+  .modal-blur {
+    filter: blur(15px);
+    z-index: -1;
+    background-color: #c1c7d0;
+  }
+
+  .modal .hr {
+    display: none;
+  }
+
+  .modal a.see-project-btn {
+    width: 100%;
+    margin-top: 24px;
+    margin-left: 0;
+    margin-bottom: 24px;
+  }
+
+  .modal a.see-project-btn {
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 1.1rem;
+    line-height: 1.5rem;
+    color: #396df2;
+    text-align: center;
+    letter-spacing: 0.03em;
+    background: #fff;
+    border: 1px solid #396df2;
+    padding: 0.5rem;
+    border-radius: 0.8rem;
+    margin-top: 1rem;
+    margin-left: 1rem;
+  }
 }
 
 .card img:hover {
@@ -618,7 +726,12 @@ textarea::placeholder {
   transition: all 2s ease-in-out 0.4s;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 @media only screen and (min-width: 768px) {
+
   .header {
     padding-left: 155px;
   }
@@ -704,7 +817,13 @@ textarea::placeholder {
     margin: auto;
   }
 
-  a.see-project-btn {
+  button.see-project-btn {
+    width: 40%;
+    margin-top: 2rem;
+    margin-left: 0;
+  }
+
+  .modal a.see-project-btn {
     width: 40%;
     margin-top: 2rem;
     margin-left: 0;
@@ -926,97 +1045,116 @@ textarea::placeholder {
     width: 120%;
     height: 20%;
   }
-  .modal {
+
+  .visible {
     min-width: 96%;
-    min-height: 100vh;
-    margin: 0 auto;
+    margin: 10% auto 0 auto;
     position: absolute;
-    top: 0;
+    top: 12%;
     left: 2%;
-    background-color: red;
     border: 1px solid #ebecf0;
     box-shadow: 0px 48px 48px rgba(37, 47, 137, 0.08);
     border-radius: 40px;
     display: flex;
     flex-direction: column;
+    background-color: #fff;
+    z-index: 20;
   }
 
-  .modal img {
-    width: 98%;
-    height: 70%;
-    object-fit: contain;
-    padding: 24px;
-  }
+.modal img {
+  width: 98%;
+  height: 70%;
+  object-fit: contain;
+  padding: 24px;
+}
 
-  .modal .project-title {
-    padding: 80px 0 20px 40px;
-  }
+.modal .project-title {
+  padding: 80px 0 20px 40px;
+}
 
-  .modal .description-and-links p {
-    width: 60%;
-    background-color: yellow;
-  }
+.modal .description-and-links p {
+  width: 60%;
+}
 
-  .modal .project-links {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 0 20px 40px;
-  }
+.modal .project-links {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 0 20px 40px;
+}
 
-  .modal .my-skills {
-    background-color: blue;
-    display: flex;
-    flex-wrap: wrap;
-    width: 40%;
-    justify-content: flex-end;
+.modal .my-skills {
+  display: flex;
+  flex-wrap: wrap;
+  width: 40%;
+  justify-content: flex-end;
 
-  }
+}
 
-  .modal .modal-right {
-    background-color: #000;
-    width: 40%;
-    display: flex;
-    flex-direction: column;
-    align-items: end;
-    justify-content: flex-end;
-    padding-right: 24px;
-  }
+.modal .modal-right {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  justify-content: flex-end;
+  padding-right: 24px;
+}
 
-  .modal .description-and-links {
-    display: flex;
-    justify-content: space-between;
-    padding: 24px;
-  }
+.modal .description-and-links {
+  display: flex;
+  justify-content: space-between;
+  padding: 24px;
+}
 
-  .modal .btns {
-    display: flex;
-    justify-content: space-between;
-    gap: 12px;
-  }
+.modal .btns {
+  display: flex;
+  justify-content: space-between;
+  gap: 12px;
+}
 
-  .modal img.cancel-modal {
-    position: absolute;
-    /* background: #000; */
-    top: 8%;
-    right: 5%;
-    z-index: 12;
-    width: 80px;
-    height: 80px;
-  }
+.modal img.cancel-modal {
+  position: absolute;
+  top: 8%;
+  right: 5%;
+  z-index: 12;
+  width: 80px;
+  height: 80px;
+}
 
-  .modal .hr {
-    width: 40%;
-    margin: 12px 2px 4px 2px;
-    display: flex;
-    justify-content: flex-end;
-  }
+.modal-blur {
+  filter: blur(15px);
+  z-index: -1;
+  background-color: #c1c7d0;
+}
 
-  .modal a.see-project-btn {
-    width: 50%;
-    margin-top: 8px;
-    margin-left: 0;
-    margin-bottom: 24px;
-  }
+.modal .hr {
+  width: 40%;
+  margin: 12px 2px 4px 2px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.modal a.see-project-btn {
+  width: 50%;
+  margin-top: 8px;
+  margin-left: 0;
+  margin-bottom: 24px;
+}
+
+.modal a.see-project-btn {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 1.1rem;
+  line-height: 1.5rem;
+  color: #396df2;
+  text-align: center;
+  letter-spacing: 0.03em;
+  background: #fff;
+  border: 1px solid #396df2;
+  padding: 0.5rem;
+  border-radius: 0.8rem;
+  margin-top: 1rem;
+  margin-left: 1rem;
+}
 }
 
 .nav-links ul li {
