--- a/styles.css
+++ b/styles.css
@@ -614,7 +614,6 @@ textarea::placeholder {
   }
 
   .visible {
-    background-color: red;
     width: 96%;
     height: 100vh;
     margin: 8px;
@@ -629,6 +628,7 @@ textarea::placeholder {
     justify-content: flex-start;
     background-color: #fff;
     z-index: 20;
+    overflow: auto;
   }
 
   .modal img {
@@ -1047,18 +1047,19 @@ body {
   }
 
   .visible {
-    min-width: 96%;
-    margin: 10% auto 0 auto;
+    width: 80%;
+    height: 100vh;
+    margin: 10% 10% 0 10%;
     position: absolute;
-    top: 12%;
-    left: 2%;
+    top: 0;
+    left: 0;
     border: 1px solid #ebecf0;
     box-shadow: 0px 48px 48px rgba(37, 47, 137, 0.08);
     border-radius: 40px;
     display: flex;
     flex-direction: column;
     background-color: #fff;
-    z-index: 20;
+    z-index: 100;
     overflow: auto;
   }
 
@@ -1066,6 +1067,7 @@ body {
     width: 98%;
     height: 70%;
     object-fit: contain;
+    margin: 0 auto;
     padding: 24px;
   }
 
@@ -1117,8 +1119,8 @@ body {
   top: 8%;
   right: 5%;
   z-index: 12;
-  width: 70px;
-  height: 70px;
+  width: 40px;
+  height: 40px;
 }
 
 .modal-blur {
@@ -1146,17 +1148,6 @@ body {
   border: 1px solid #396df2;
   padding: 8px;
   border-radius: 0.8rem;
-}
-
-.modal-section {
-  width: 100%;
-  min-height: 100vh;
-  transition: 0.2s ease-in-out;
-  background-color: rgba(165, 185, 224, 0.5);
-  -webkit-backdrop-filter: blur(5px);
-  backdrop-filter: blur(5px);
-  display: none;
-  overflow: auto;
 }
 }
 
